--- a/title.tex
+++ b/title.tex
@@ -7,7 +7,7 @@
             
         \vspace{0.5cm}
         \LARGE
-        A LLM-driven framework for scaling parliamentary representatives
+        An LLM-driven framework for scaling parliamentary representatives
             
         \vspace{1.5cm}
             
