--- a/title.tex
+++ b/title.tex
@@ -1,27 +1,26 @@
 \begin{titlepage}
+    \thispagestyle{empty} % Remove page numbers
     \begin{center}
-        \vspace*{1cm}
-            
-        \Huge
-        \textbf{KOKKAI DOC}
-            
-        \vspace{0.5cm}
-        \LARGE
-        An LLM-driven framework for scaling parliamentary representatives
-            
-        \vspace{1.5cm}
-            
-        \textbf{Ken Kato}\\
+        % -- Title --
         \Large
-        1006344760\\
-        Department of Engineering Science\\
-        University of Toronto\\
+        \textbf{KOKKAI DOC}\\
+        \textbf{An LLM-driven framework for scaling parliamentary representatives}
+
         \vspace{1.5cm}
-        \LARGE
-        \textbf{Supervisor: Dr. Christopher Cochrane}\\
-        \Large
-        Department of Political Science\\
-        University of Toronto Scarborough\\        
-            
+
+        % -- Author --
+        by\\
+        \textbf{Ken Kato}
+
+        \vspace{1.5cm}
+
+        % -- Supervisor & Date --
+        Supervisor: \textbf{Christopher Cochrane}\\
+        April 7th, 2025
+
+        \vfill % Push image to the bottom
+
+        \includegraphics[width=\textwidth]{figs/front.png}% No line break after
+
     \end{center}
 \end{titlepage}
