--- a/title.tex
+++ b/title.tex
@@ -20,7 +20,7 @@
 
         \vfill % Push image to the bottom
 
-        \includegraphics[width=\textwidth]{figs/front.png}% No line break after
+        % \includegraphics[width=\textwidth]{figs/front.png}% No line break after
 
     \end{center}
 \end{titlepage}
